--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,11 @@ body {
   padding: 50px 0px 0px 0px;
 }
 
-#login {
+#login,
+#logout,
+#register,
+.add-to-cart,
+.remove-from-cart {
   cursor: pointer;
 }
 
@@ -106,4 +110,11 @@ li {
 
 .emoji {
   cursor: pointer;
+}
+
+#welcome {
+  color: white;
+  margin-right: 1rem;
+  margin-top: 1rem;
+  font-weight: 700;
 }
